wrote scripts to generate tasks x subtopics prompts

--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21"
+       "11"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,13 +20,34 @@
     "import pandas as pd\n",
     "import json\n",
     "\n",
-    "json_file_path = \"../results/medical_professions.json\"\n",
+    "json_file_path = \"../results/medical_ai_tasks.json\"\n",
     "\n",
     "# Load JSON data from file\n",
     "with open(json_file_path, 'r', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"300-1\"\n",
+    "int(string.split(\"-\")[1])"
    ]
   }
  ],
