--- a/scripts/parse_gpt_response.ipynb
+++ b/scripts/parse_gpt_response.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1 -> specialties x domains"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -165,6 +172,119 @@
     "            id = data.get(\"custom_id\") # format \"1\"\n",
     "            if response_content and id:\n",
     "                parsed_response = parse_gpt_response(response_content, id, contexts)\n",
+    "                if bool(parsed_response):\n",
+    "                    medical_prompts.append(parsed_response)\n",
+    "                else:\n",
+    "                    questions_failed_to_parse.append(id)\n",
+    "        except json.JSONDecodeError as e:\n",
+    "            questions_failed_to_parse.append(id)\n",
+    "print(\"Parsing completed\")\n",
+    "\n",
+    "# Save to JSON file\n",
+    "with open(output_path, 'w') as json_file:\n",
+    "    json.dump(medical_prompts, json_file, indent=4)\n",
+    "\n",
+    "# Output the parsed data (for verification)\n",
+    "print(f\"Medical prompts have been saved to {output_path}\")\n",
+    "print(\"See an example below:\")\n",
+    "print(json.dumps(parsed_response, indent=4))\n",
+    "print(f\"Failed to parse {len(questions_failed_to_parse)} questions:\")\n",
+    "print(questions_failed_to_parse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2 - ai_tasks x subtopics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load files necessary for context and store them in lists\n",
+    "import json\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Path for input data and to store prompts\n",
+    "medical_ai_tasks_file = \"../results/medical_ai_tasks.json\"\n",
+    "subtopics_file = \"../results/medical_subtopics.json\"\n",
+    "\n",
+    "# store medical AI tasks in a list\n",
+    "with open(medical_ai_tasks_file, 'r') as file:\n",
+    "    medical_ai_tasks = json.load(file)  # Load JSON data from file\n",
+    "\n",
+    "# store subtopics in a list\n",
+    "with open(subtopics_file, 'r') as file:\n",
+    "    subtopics_data = json.load(file)  # Load JSON data from file\n",
+    "\n",
+    "# Extract subtopics\n",
+    "subtopics = []\n",
+    "for item in subtopics_data:\n",
+    "    subtopics.extend(item['subtopic'])  # Add each subtopic list to the main list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to parse the string and create a JSON object\n",
+    "def parse_gpt_response_2(string, task_id, subtopic_id, medical_ai_tasks, subtopics):\n",
+    "    \"\"\"\n",
+    "    Helper function fur parse_results()\n",
+    "    Parses the gpt responses from string to dict\n",
+    "    \"\"\"\n",
+    "# Create a dictionary to hold the data in the desired format\n",
+    "# Only successfull if all that is expected is present\n",
+    "\n",
+    "    try:\n",
+    "        # Attempt to load the JSON string\n",
+    "        # TODO: verify that gpt_response is like that\n",
+    "\n",
+    "        # Decode any UTF-8 character codes in the input string\n",
+    "        decoded_string = (string.encode().decode('unicode_escape')).encode('latin1').decode('utf-8')\n",
+    "\n",
+    "        data_dict = {}\n",
+    "        data_dict[\"id\"] = (task_id, subtopic_id)\n",
+    "        data_dict[\"prompt\"] = decoded_string\n",
+    "        data_dict[\"context\"] = medical_ai_tasks[task_id][\"task\"] + \", \" + subtopics[subtopic_id]\n",
+    "        return data_dict\n",
+    "\n",
+    "    except json.JSONDecodeError as e:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "path_to_results = \"../results/gpt_results.jsonl\"\n",
+    "output_path = \"../results/parsed_prompts_tasks_x_subtopics.json\"\n",
+    "\n",
+    "\n",
+    "# TODO: do both in the same for loop, no need to store contents\n",
+    "# Extract content from json\n",
+    "print(\"Parsing GPT responses...\")\n",
+    "medical_prompts = []\n",
+    "questions_failed_to_parse = []\n",
+    "with open(path_to_results, 'r') as file:\n",
+    "    for line in tqdm(file):\n",
+    "        try:\n",
+    "            data = json.loads(line)  # Parse each line as JSON\n",
+    "            response_content = data.get(\"response\", {}).get(\"body\", {}).get(\"choices\", [])[0].get(\"message\", {}).get(\"content\", None)\n",
+    "            id = data.get(\"custom_id\") # format \"0-0\" \"task_id - subtopic_id\"\n",
+    "            if response_content and id:\n",
+    "                parsed_response = parse_gpt_response_2(response_content, int(id.split(\"-\")[0]), int(id.split(\"-\")[1]), medical_ai_tasks, subtopics)\n",
     "                if bool(parsed_response):\n",
     "                    medical_prompts.append(parsed_response)\n",
     "                else:\n",
