--- a/scripts/interact_with_gpt.ipynb
+++ b/scripts/interact_with_gpt.ipynb
@@ -9,16 +9,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from tqdm import tqdm\n",
+    "from openai import OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate prompts based on medical profession speciality x medical domain\n",
+    "\n",
+    "content_1 = \"You are an assistant responsible for creating prompts that healthcare workers would ask a medical AI chatbot.\"\n",
+    "prompt_1 = f'''Generate a prompt that a Physician specializing in Allergy and Immunology might ask an AI chatbot about the Urinary System regarding a practical issue they are facing with a patient.\n",
+    "Only include the prompt from the Physician specializing in Allergy and Immunology about the Urinary System in your response, with no additional text.\n",
+    "'''\n",
+    "# TODO: Maybe add examples\n",
+    "# Good example: Can you assist in determining if there is a potential link between recurrent urinary tract infections and an underlying immunodeficiency in a patient, and what specific immunological tests should be considered for further investigation?\n",
+    "\n",
+    "\n",
+    "# Generate prompts based on medical AI task\n",
+    "\n",
+    "# store medical AI tasks in a list\n",
+    "medical_ai_tasks_file = \"../results/medical_ai_tasks.json\"\n",
+    "with open(medical_ai_tasks_file, 'r') as file:\n",
+    "    medical_ai_tasks = json.load(file)  # Load JSON data from file\n",
+    "test_task = medical_ai_tasks[6]\n",
+    "\n",
+    "# store subtopics in a list\n",
+    "subtopics_file = \"../results/medical_subtopics.json\"\n",
+    "with open(subtopics_file, 'r') as file:\n",
+    "    subtopics_data = json.load(file)  # Load JSON data from file\n",
+    "\n",
+    "# Extract subtopics\n",
+    "subtopics = []\n",
+    "for item in subtopics_data:\n",
+    "    subtopics.extend(item['subtopic'])  # Add each subtopic list to the main list\n",
+    "test_subtopic = subtopics[25]\n",
+    "\n",
+    "content_2 = \"You are an assistant responsible for creating prompts that healthcare workers would ask a medical AI chatbot.\"\n",
+    "prompt_2 = f'''Generate a prompt that a physician might ask an AI chatbot when tasked with {test_task[\"task\"]} in the context of {test_subtopic} in the medical field.\n",
+    "{test_task[\"task\"]} is described as: {test_task[\"description\"]}\n",
+    "To create a realistic prompt, follow these additional instructions: {test_task[\"additional_instruction\"]}\n",
+    "Only include the generated prompt, adding extra details only if specified. Focus solely on a realistic prompt a physician might ask a medical AI chatbot.\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Send prompts to GPT and process them\n",
+      "Send prompt to GPT:\n",
+      "#########\n",
+      "Generate a prompt that a physician might ask an AI chatbot when tasked with Clinical Documentation in the context of Endocrine Pathophysiology in the medical field.\n",
+      "Clinical Documentation is described as: Transcribing notes of a healthcare worker.\n",
+      "To create a realistic prompt, follow these additional instructions: Generate notes that a healthcare worker would write during an anamnesis. The healthcare worker would then want these notes transcribed for inclusion in an official medical record.\n",
+      "Only include the generated prompt, adding extra details only if specified. Focus solely on a realistic prompt a physician might ask a medical AI chatbot.\n",
+      "\n",
+      "########\n",
       "Receiving responses from GPT...\n",
-      "\"What could be the immunological factors to consider in a patient with recurrent UTIs potentially linked to an allergic reaction?\"\n"
+      "\"Please transcribe the following anamnesis notes for the patient's medical record: The patient is a 52-year-old female presenting with fatigue, weight gain, and cold intolerance over the past six months. She reports minimal hair loss and changes in skin texture. Her family history is significant for thyroid disease. Notable lab results include elevated TSH and low free T4 levels. Current medications include levothyroxine. Please organize these details into the structured format required for clinical documentation.\"\n"
      ]
     }
    ],
@@ -26,25 +87,18 @@
     "# Test version of interacting with the openai API\n",
     "# Generates only 1 output and prints it\n",
     "\n",
-    "import json\n",
-    "from tqdm import tqdm\n",
-    "from openai import OpenAI\n",
-    "\n",
     "path_to_api_key: str = \"../API_KEY.txt\"\n",
     "my_api_key = open(path_to_api_key, 'r').read()\n",
     "client = OpenAI(api_key=my_api_key)\n",
     "gpt_model: str = \"gpt-4o\"\n",
+    "content = content_2\n",
+    "prompt = prompt_2\n",
     "\n",
-    "print(\"Send prompts to GPT and process them\")\n",
-    "print(\"Receiving responses from GPT...\")\n",
     "\n",
-    "\n",
-    "content = \"You are an assistant responsible for creating prompts that healthcare workers would ask a medical AI chatbot.\"\n",
-    "prompt = f'''Generate a prompt that a Physician specializing in Allergy and Immunology might ask an AI chatbot about the Urinary System regarding a practical issue they are facing with a patient.\n",
-    "Only include the prompt from the Physician specializing in Allergy and Immunology about the Urinary System in your response, with no additional text.\n",
-    "'''\n",
-    "# TODO: Maybe add examples\n",
-    "# Good example: Can you assist in determining if there is a potential link between recurrent urinary tract infections and an underlying immunodeficiency in a patient, and what specific immunological tests should be considered for further investigation?\n",
+    "print(\"Send prompt to GPT:\")\n",
+    "print(\"#########\")\n",
+    "print(prompt)\n",
+    "print(\"########\")\n",
     "\n",
     "completion = client.chat.completions.create(\n",
     "    model= gpt_model,\n",
@@ -56,7 +110,7 @@
     "        }\n",
     "    ]\n",
     ")\n",
-    "\n",
+    "print(\"Receiving responses from GPT...\")\n",
     "print(completion.choices[0].message.content)"
    ]
   },
@@ -177,10 +231,6 @@
    "source": [
     "# Generate topics using openai API\n",
     "\n",
-    "import json\n",
-    "from tqdm import tqdm\n",
-    "from openai import OpenAI\n",
-    "\n",
     "path_to_data: str = \"../results/medical_topics.json\"\n",
     "output_path: str = '../results/medical_subtopics.json'\n",
     "\n",
@@ -200,9 +250,9 @@
     "print(\"Receiving responses from GPT...\")\n",
     "\n",
     "N_real = len(data)\n",
-    "N_test = 1\n",
+    "N_test = 0\n",
     "\n",
-    "for i in tqdm(range(N_real)):\n",
+    "for i in tqdm(range(N_test)): # Change to N_real -> WILL COST MONEY\n",
     "    topic = data[i][\"topic\"]\n",
     "    content = \"You are an assistant to create an overview of the medical field\"\n",
     "    prompt = f'''Generate for the medical domain: {topic} 10 - 20 subtopics and/or subdomains.'''\n",
