--- a/scripts/parse_gpt_response.ipynb
+++ b/scripts/parse_gpt_response.ipynb
@@ -210,7 +210,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "# Path for input data and to store prompts\n",
-    "medical_ai_tasks_file = \"../results/medical_ai_tasks.json\"\n",
+    "medical_ai_tasks_file = \"../results/medical_ai_tasks_part2.json\"\n",
     "subtopics_file = \"../results/medical_subtopics.json\"\n",
     "\n",
     "# store medical AI tasks in a list\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
     "        decoded_string = (string.encode().decode('unicode_escape')).encode('latin1').decode('utf-8')\n",
     "\n",
     "        data_dict = {}\n",
-    "        data_dict[\"id\"] = str(task_id) + \"-\" + str(subtopic_id)\n",
+    "        data_dict[\"id\"] = str(11+task_id) + \"-\" + str(subtopic_id) # TODO: +11 for the part 2\n",
     "        data_dict[\"prompt\"] = decoded_string\n",
     "        data_dict[\"context\"] = medical_ai_tasks[task_id][\"task\"] + \", \" + subtopics[subtopic_id]\n",
     "        return data_dict\n",
@@ -275,9 +275,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6053it [00:00, 26737.52it/s]C:\\Users\\timar\\AppData\\Local\\Temp\\ipykernel_33260\\2137159246.py:15: DeprecationWarning: invalid escape sequence '\\-'\n",
-      "  decoded_string = (string.encode().decode('unicode_escape')).encode('latin1').decode('utf-8')\n",
-      "10736it [00:00, 30624.08it/s]\n"
+      "1952it [00:00, 32356.32it/s]"
      ]
     },
     {
@@ -285,15 +283,22 @@
      "output_type": "stream",
      "text": [
       "Parsing completed\n",
-      "Medical prompts have been saved to ../results/parsed_prompts_tasks_x_subtopics.json\n",
+      "Medical prompts have been saved to ../results/parsed_prompts_tasks_x_subtopics_part2.json\n",
       "See an example below:\n",
       "{\n",
-      "    \"id\": \"10-975\",\n",
-      "    \"prompt\": \"Translate the following patient instructions from English to Spanish: \\\"Take one tablet by mouth every 12 hours with food. Do not crush or chew the tablet. If you miss a dose, take it as soon as you remember unless it is almost time for your next dose.\\\"\",\n",
-      "    \"context\": \"Language Translation, Digital Health and Mobile Health Technologies\"\n",
+      "    \"id\": \"12-975\",\n",
+      "    \"prompt\": \"How can our practice ensure compliance with HIPAA regulations while implementing a new mobile health app for remote patient monitoring, specifically concerning data encryption and patient consent protocols?\",\n",
+      "    \"context\": \"Health Policy Guidance, Digital Health and Mobile Health Technologies\"\n",
       "}\n",
       "Failed to parse 0 questions:\n",
       "[]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -302,7 +307,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "path_to_results = \"../results/gpt_results.jsonl\"\n",
-    "output_path = \"../results/parsed_prompts_tasks_x_subtopics.json\"\n",
+    "output_path = \"../results/parsed_prompts_tasks_x_subtopics_part2.json\"\n",
     "\n",
     "\n",
     "# TODO: do both in the same for loop, no need to store contents\n",
