implemented get_multiturn_style()

--- a/scripts/multiturn.ipynb
+++ b/scripts/multiturn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,9 @@
     "class multiturn_style:\n",
     "    def __init__(self, id, country, setting = \"high\", nbr_of_turns = 1, mode = \"normal\",\n",
     "                 cb_style = \"flat text\", cb_length = \"short\", cb_scientific = \"standard\",\n",
-    "                 u_length = \"short\",  u_scientific = False, u_bad_grammar = False, u_knows_diagnosis = False):\n",
+    "                 u_length = \"short\",  u_scientific = False, u_specialty = \"physician\", u_bad_grammar = False):\n",
     "         \n",
-    "        # Initialize global attributes\n",
+    "        # Initialize situational attributes\n",
     "        self.id = id # based on prompt origin and prompt number\n",
     "        self.country = country # country the user is working in\n",
     "        self.setting = setting  # Can be 'high', 'low', or 'war' -> not used so far\n",
@@ -53,12 +53,13 @@
     "        # Initialize attributes that determine system prompt of user\n",
     "        self.user_length = u_length # Length of user questions -> possibilities: short, long, exactly_1_sentence, exactly_3_sentences\n",
     "        self.user_scientific = u_scientific # User uses a lot of very scientific terms -> not used so far\n",
+    "        self.user_specialty = u_specialty\n",
     "        self.bad_grammar = u_bad_grammar # user has bad grammar / does a lot of spelling mistakes -> not used so far\n",
-    "        self.knows_diagnosis = u_knows_diagnosis # User has an idea about the diagnosis -> not used so far\n",
     "\n",
     "        # Fixed attributes\n",
-    "        self.base_system_prompt_chatbot = f'''You are a medical AI chatbot designed to assist physicians working in {self.country} by answering their questions. \\nThe style of your answers must follow these rules: \\n'''\n",
-    "        self.base_system_prompt_user = f'''You are a physician working in {self.country} using a medical AI chatbot to help you taking care of your patients. \\nThe initial question that you ask the medical AI chatbot has already been provided. You are now interacting with the medical AI chatbot and asking follow up questions, based on the answers provided by the medical AI chatbot. \\nThe style of the follow up question you ask must follow these rules: \\n'''\n",
+    "        self.base_system_prompt_chatbot = f'''You are a medical AI chatbot designed to assist health care workers working in {self.country} by answering their questions. \\nThe style of your answers must follow these rules: \\n'''\n",
+    "        self.base_system_prompt_user = f'''You are a {self.user_specialty} working in {self.country} using a medical AI chatbot to help you taking care of your patients. \\nThe initial question that you ask the medical AI chatbot has already been provided. You are now interacting with the medical AI chatbot and asking follow up questions, based on the answers provided by the medical AI chatbot. \\nThe style of the follow up question you ask must follow these rules: \\n'''\n",
+    "\n",
     "        self.number_of_turns_done = 0\n",
     "\n",
     "    # methods\n",
@@ -114,9 +115,9 @@
     "        # User behavior is characterized by 3 different modes: chat, normal or emergency mode\n",
     "        match self.mode:\n",
     "            case \"chat\":\n",
-    "                self.base_system_prompt_user += \"You (the physician using the medical AI chatbot) are using the medical AI chatbot in chat mode. Ask short and concise questions that make it possible for the chatbot to chat with you. Ask follow up questions about the answers from the chatbot if the answers are not clear enough. \\n\"\n",
+    "                self.base_system_prompt_user += f\"You (the {self.user_specialty} using the medical AI chatbot) are using the medical AI chatbot in chat mode. Ask short and concise questions that make it possible for the chatbot to chat with you. Ask follow up questions about the answers from the chatbot if the answers are not clear enough. \\n\"\n",
     "            case \"emergency\":\n",
-    "                self.base_system_prompt_chatbot += \"You (the physician using the medical AI chatbot) are using the medical AI chatbot during a medical emergency. Ask short and fastly written questions. \\n\"\n",
+    "                self.base_system_prompt_chatbot += f\"You (the {self.user_specialty} using the medical AI chatbot) are using the medical AI chatbot during a medical emergency. Ask short and fastly written questions. \\n\"\n",
     "            case \"normal\":\n",
     "                # Set epected length of chatbots answer\n",
     "                match self.user_length:\n",
@@ -148,67 +149,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are a medical AI chatbot designed to assist physicians working in Colombia by answering their questions. \n",
+      "You are a medical AI chatbot designed to assist physicians working in Croatia by answering their questions. \n",
       "The style of your answers must follow these rules: \n",
-      "Provide long and detailed answers. \n",
-      "Provide your answers in flat text. \n",
+      "The user is using you (the medical AI chatbot) in chat mode. Provide short and concise answers that make it possible for the user to chat with you. Ask the user follow up questions about his question if his question is not clear enough. \n",
       "\n",
-      "You are a physician working in Colombia using a medical AI chatbot to help you taking care of your patients. \n",
+      "You are a physician working in Croatia using a medical AI chatbot to help you taking care of your patients. \n",
       "The initial question that you ask the medical AI chatbot has already been provided. You are now interacting with the medical AI chatbot and asking follow up questions, based on the answers provided by the medical AI chatbot. \n",
       "The style of the follow up question you ask must follow these rules: \n",
-      "All your questions should be exactly 3 sentences long. \n",
+      "You (the physician using the medical AI chatbot) are using the medical AI chatbot in chat mode. Ask short and concise questions that make it possible for the chatbot to chat with you. Ask follow up questions about the answers from the chatbot if the answers are not clear enough. \n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Helper function get sample\n",
+    "\n",
+    "def get_sample(choices, weights):\n",
+    "    return random.choices(choices, weights, k=1)[0]\n",
+    "\n",
     "# Function that creates the multiturn_style objects, following the distributions specified\n",
     "\n",
     "countries = pd.read_csv(\"../resources/countries_by_income_category.csv\")\n",
     "sampled_country = random.choice(countries.iloc[:, 0].tolist())\n",
-    "id = 0\n",
+    "id = \"0-122\"\n",
     "\n",
     "# Tasks\n",
     "# 0 - \"Diagnosing Symptoms\", 1 - \"Predictive Analytics\", 2 - \"Drug Interaction Checks\", 3 - \"Treatment Recommendations\"\n",
     "# 4 - \"Medication Management\", 5 - \"Patient Education\", 6 - \"Clinical Documentation\", 7 - \"Lab Test Interpretation\"\n",
-    "# 8 - \"Health Risk Assessment\", 9 - \"Nutrition and Diet Planning\", 10 - \"Language Translation\", 11 - \"Emergency Triage\", 12 - \"Health Policy Guidance\"\n",
+    "# 8 - \"Health Risk Assessment\", 9 - \"Nutrition and Diet Planning\", 10 - \"Language Translation\", 11 - \"Emergency Triage\"\n",
+    "# 12 - \"Health Policy Guidance\", 20 - Specialty times domain prompts\n",
     "\n",
-    "def get_multiturn_style(id, sampled_country): # id is task_id - specialty_id\n",
+    "def get_multiturn_style(id, sampled_country, profession = \"no\", specialty = \"no\", domain = \"no\"): # id is task_id - specialty_id\n",
     "\n",
     "    # Usage mode: chat, normal, emergency (depening on id -> since )\n",
     "    mode_choices = [\"chat\", \"normal\", \"emergency\"]\n",
-    "    mode_choices_weights = [0.3, 0.6, 0.1] # TODO: change based on task id\n",
-    "    cb_length = random.choices(chatbot_length_choices, weights=chatbot_length_choices_weights, k=1)[0]\n",
+    "    match int(id.split(\"-\")[0]):\n",
+    "        case n if n in [1, 4, 5, 8, 9, 10, 12]: # Non Emergency cases\n",
+    "            mode = get_sample(choices=mode_choices, weights=[0.4, 0.6, 0])\n",
+    "        case 6: # Non Emergency and non chat option\n",
+    "              mode = \"normal\"\n",
+    "        case n if n in [0, 2, 3, 7]: # All cases possible\n",
+    "            mode = get_sample(choices=mode_choices, weights=[0.4, 0.5, 0.1])\n",
+    "        case 11: # Very good for emergency\n",
+    "            mode = get_sample(choices=mode_choices, weights=[0.3, 0.3, 0.4])\n",
+    "        case 20:\n",
+    "            if specialty == \"Emergency Medicine\" or domain == \"Emergency Medicine\":\n",
+    "                mode = \"emergency\"\n",
+    "            else:\n",
+    "                mode = get_sample(choices=mode_choices, weights=[0.4, 0.6, 0])\n",
+    "        case _:\n",
+    "            raise ValueError(f\"Invalid id: '{id}'\")     \n",
+    "    \n",
+    "    # Number of turn\n",
+    "    nbr_of_turns_choices = [1, 2, 3]\n",
+    "    match mode:\n",
+    "        case s if s in [\"chat\", \"emergency\"]:\n",
+    "            nbr_of_turns = get_sample(choices=nbr_of_turns_choices, weights=[0.2, 0.3, 0.5])\n",
+    "        case \"normal\":\n",
+    "            nbr_of_turns = get_sample(choices=nbr_of_turns_choices, weights=[0.4, 0.3, 0.3])\n",
     "\n",
     "    # Length of chatbots answer -> possibilities: short, long, exactly_2_sentences, exactly_4_sentences\n",
     "    chatbot_length_choices = [\"short\", \"long\", \"exactly_2_sentences\", \"exactly_4_sentences\"]\n",
-    "    chatbot_length_choices_weights = [0.3, 0.5, 0.1, 0.1]\n",
-    "    cb_length = random.choices(chatbot_length_choices, weights=chatbot_length_choices_weights, k=1)[0]\n",
+    "    cb_length = get_sample(choices=chatbot_length_choices, weights=[0.3, 0.5, 0.1, 0.1])\n",
     "\n",
     "    # Style of chatbot's answer -> possibilities: chat, flat text, bullets, step by step\n",
     "    chatbot_style_choices = [\"flat text\", \"bullets\", \"step by step\"]\n",
-    "    chatbot_style_choices_weights = [0.5, 0.25, 0.25]\n",
-    "    cb_style = random.choices(chatbot_style_choices, weights=chatbot_style_choices_weights, k=1)[0]\n",
+    "    cb_style = get_sample(choices=chatbot_style_choices, weights=[0.5, 0.25, 0.25])\n",
+    "\n",
+    "    # If chatbot uses a lot of scientific term -> possibilities: popularization, standard, scientific\n",
+    "    chatbot_scientific_choices = [\"popularization\", \"standard\", \"scientific\"]\n",
+    "    cb_scientific = get_sample(choices=chatbot_scientific_choices, weights=[0.1, 0.8, 0.1])\n",
     "\n",
     "    # Length of user questions -> possibilities: chat, short, long, exactly_1_sentence, exactly_3_sentences\n",
     "    user_length_choices = [\"short\", \"long\", \"exactly_1_sentence\", \"exactly_3_sentences\"]\n",
-    "    user_length_choices_weights = [0.4, 0.3, 0.2, 0.1]\n",
-    "    u_length = random.choices(user_length_choices, weights=user_length_choices_weights, k=1)[0]\n",
+    "    u_length = get_sample(choices=user_length_choices, weights=[0.4, 0.3, 0.2, 0.1])\n",
+    "\n",
+    "    # If the user uses a lot of scientific term -> possibilities: popularization, standard, scientific\n",
+    "    user_scientific_choices = [\"popularization\", \"standard\", \"scientific\"]\n",
+    "    u_scientific = get_sample(choices=user_scientific_choices, weights=[0.1, 0.8, 0.1])\n",
+    "\n",
+    "    if profession == \"no\": # task_x_subtopics case\n",
+    "        return multiturn_style(id=id, country=sampled_country, nbr_of_turns=nbr_of_turns, mode=mode,\n",
+    "                            cb_length=cb_length, cb_style=cb_style, cb_scientific=cb_scientific,\n",
+    "                            u_length=u_length, u_scientific=u_scientific)\n",
+    "    else:\n",
+    "        return multiturn_style(id=id, country=sampled_country, nbr_of_turns=nbr_of_turns, mode=mode,\n",
+    "                            cb_length=cb_length, cb_style=cb_style, cb_scientific=cb_scientific,\n",
+    "                            u_length=u_length, u_scientific=u_scientific, u_specialty= profession + \"specialized in \" + specialty)\n",
     "\n",
     "\n",
-    "    return multiturn_style(country=sampled_country, id=id, cb_length=cb_length, cb_style=cb_style, emergency=emergency, u_length=u_length)\n",
-    "\n",
-    "multiturn_style_1 = get_multiturn_style(id)\n",
+    "multiturn_style_1 = get_multiturn_style(id, sampled_country)\n",
     "\n",
     "print(multiturn_style_1.system_prompt_chatbot())\n",
     "print(multiturn_style_1.system_prompt_user())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a medical AI chatbot designed to assist physicians working in Switzerland by answering their questions. \n",
+      "The style of your answers must follow these rules: \n",
+      "The user is using you (the medical AI chatbot) in chat mode. Provide short and concise answers that make it possible for the user to chat with you. Ask the user follow up questions about his question if his question is not clear enough. \n",
+      "\n",
+      "You are a physician working in Switzerland using a medical AI chatbot to help you taking care of your patients. \n",
+      "The initial question that you ask the medical AI chatbot has already been provided. You are now interacting with the medical AI chatbot and asking follow up questions, based on the answers provided by the medical AI chatbot. \n",
+      "The style of the follow up question you ask must follow these rules: \n",
+      "You (the physician using the medical AI chatbot) are using the medical AI chatbot in chat mode. Ask short and concise questions that make it possible for the chatbot to chat with you. Ask follow up questions about the answers from the chatbot if the answers are not clear enough. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10000):\n",
+    "    test = get_multiturn_style(str(i%12)+\"-112\", \"Switzerland\")\n",
+    "\n",
+    "print(test.system_prompt_chatbot())\n",
+    "print(test.system_prompt_user())"
    ]
   },
   {
